--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body></body>
+    <h2>Hello GitHub</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/1200px-Octicons-mark-github.svg.png" alt="">
+    <h3>Today I studied such console commands"</h3>
+    <ul>
+        <li>cd</li>
+        <li>dir</li>
+        <li>mkdir</li>
+        <li>rmdir</li>
+        <li>color</li>
+        <li>cls</li>
+    </ul>
+    <h3>And such git console commands:</h3>
+    <ul>
+        <li>git add</li>
+        <li>git commit</li>
+        <li>git push</li>
+    </ul>
 </html>
-
-
-
-
-
-
